{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 81,
  "lineage": "e2fe05e2-5e15-0f57-8bc3-437e63e3311a",
  "resources": [
    {
      "module": "module.create_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff8a91507f77f867",
            "arn": "arn:aws:ec2:us-east-1:208658976603:instance/i-056239d4d0e4fc4b5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-056239d4d0e4fc4b5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c5b301b0c20a8618",
            "private_dns": "ip-10-0-17-218.ec2.internal",
            "private_ip": "10.0.17.218",
            "public_ip": "18.234.49.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08338291db6d771f6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-09eb759c3d6fdbffb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd6229c0570153f4",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09eb759c3d6fdbffb"
            ]
          },
          "dependencies": [
            "module.create_key_pair.aws_key_pair.deployer",
            "module.create_sg.aws_security_group.allow_http_ssh",
            "module.create_vpc.aws_subnet.private1"
          ]
        }
      ]
    },
    {
      "module": "module.create_lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "public_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:208658976603:loadbalancer/app/tech-test-app/90e5d5f5aed490bc",
            "arn_suffix": "app/tech-test-app/90e5d5f5aed490bc",
            "dns_name": "tech-test-app-1940989425.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:208658976603:loadbalancer/app/tech-test-app/90e5d5f5aed490bc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tech-test-app",
            "security_groups": [
              "sg-09eb759c3d6fdbffb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-049b1d18fbada0145"
              },
              {
                "subnet_id": "subnet-05cb49b70e9347d6e"
              },
              {
                "subnet_id": "subnet-0fcf3e75f5e508533"
              }
            ],
            "subnets": [
              "subnet-049b1d18fbada0145",
              "subnet-05cb49b70e9347d6e",
              "subnet-0fcf3e75f5e508533"
            ],
            "vpc_id": "vpc-0afffeb3d0e3941fd",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.create_vpc.aws_vpc.main",
            "module.create_sg.aws_security_group.allow_http_ssh",
            "module.create_vpc.aws_subnet.public1",
            "module.create_vpc.aws_subnet.public2",
            "module.create_vpc.aws_subnet.public3"
          ]
        }
      ]
    },
    {
      "module": "module.create_lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:208658976603:listener/app/tech-test-app/90e5d5f5aed490bc/8d894156d4314a03",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:208658976603:targetgroup/tech-challenge-targetgroup/a327e2ed271b7132",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:208658976603:listener/app/tech-test-app/90e5d5f5aed490bc/8d894156d4314a03",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:208658976603:loadbalancer/app/tech-test-app/90e5d5f5aed490bc",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create_lb.aws_lb_target_group.web",
            "module.create_sg.aws_security_group.allow_http_ssh",
            "module.create_vpc.aws_subnet.public1",
            "module.create_vpc.aws_subnet.public2",
            "module.create_vpc.aws_subnet.public3",
            "module.create_vpc.aws_vpc.main",
            "module.create_lb.aws_lb.public_lb"
          ]
        }
      ]
    },
    {
      "module": "module.create_lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:208658976603:targetgroup/tech-challenge-targetgroup/a327e2ed271b7132",
            "arn_suffix": "targetgroup/tech-challenge-targetgroup/a327e2ed271b7132",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:208658976603:targetgroup/tech-challenge-targetgroup/a327e2ed271b7132",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tech-challenge-targetgroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0afffeb3d0e3941fd"
          },
          "dependencies": [
            "module.create_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_lb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_attachement",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:208658976603:targetgroup/tech-challenge-targetgroup/a327e2ed271b7132-20210506113516072200000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:208658976603:targetgroup/tech-challenge-targetgroup/a327e2ed271b7132",
            "target_id": "i-056239d4d0e4fc4b5"
          },
          "dependencies": [
            "module.create_ec2.aws_instance.web",
            "module.create_key_pair.aws_key_pair.deployer",
            "module.create_lb.aws_lb_target_group.web",
            "module.create_sg.aws_security_group.allow_http_ssh",
            "module.create_vpc.aws_subnet.private1"
          ]
        }
      ]
    },
    {
      "module": "module.create_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208658976603:security-group/sg-09eb759c3d6fdbffb",
            "description": "Allow ssh and http traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-09eb759c3d6fdbffb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "app from internet",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_https_ssh",
            "name_prefix": "",
            "owner_id": "208658976603",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http_ssh"
            },
            "tags_all": {
              "Name": "allow_http_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afffeb3d0e3941fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208658976603:security-group/sg-0ea49e395e3bc8003",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ea49e395e3bc8003",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "postgres from app",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "allow_postgres",
            "name_prefix": "",
            "owner_id": "208658976603",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0afffeb3d0e3941fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208658976603:route-table/rtb-04db26279d228a5f0",
            "default_route_table_id": "rtb-04db26279d228a5f0",
            "id": "rtb-04db26279d228a5f0",
            "owner_id": "208658976603",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08ee8778841343018",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0afffeb3d0e3941fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create_vpc.aws_vpc.main",
            "module.create_vpc.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.create_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208658976603:internet-gateway/igw-08ee8778841343018",
            "id": "igw-08ee8778841343018",
            "owner_id": "208658976603",
            "tags": {
              "Name": "tech_challenge_igw"
            },
            "tags_all": {
              "Name": "tech_challenge_igw"
            },
            "vpc_id": "vpc-0afffeb3d0e3941fd"
          },
          "dependencies": [
            "module.create_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208658976603:subnet/subnet-0922169f924358a6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/22",
            "id": "subnet-0922169f924358a6b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "208658976603",
            "tags": {
              "Name": "data1"
            },
            "tags_all": {
              "Name": "data1"
            },
            "vpc_id": "vpc-0afffeb3d0e3941fd"
          },
          "dependencies": [
            "module.create_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208658976603:subnet/subnet-094c1cd4be8df4dae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.36.0/22",
            "id": "subnet-094c1cd4be8df4dae",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "208658976603",
            "tags": {
              "Name": "data2"
            },
            "tags_all": {
              "Name": "data2"
            },
            "vpc_id": "vpc-0afffeb3d0e3941fd"
          },
          "dependencies": [
            "module.create_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208658976603:subnet/subnet-0e87a4b72af935c64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.40.0/22",
            "id": "subnet-0e87a4b72af935c64",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "208658976603",
            "tags": {
              "Name": "data3"
            },
            "tags_all": {
              "Name": "data3"
            },
            "vpc_id": "vpc-0afffeb3d0e3941fd"
          },
          "dependencies": [
            "module.create_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208658976603:subnet/subnet-0fd6229c0570153f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.16.0/22",
            "id": "subnet-0fd6229c0570153f4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "208658976603",
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "vpc_id": "vpc-0afffeb3d0e3941fd"
          },
          "dependencies": [
            "module.create_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208658976603:subnet/subnet-005ccaca41d5e430f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.20.0/22",
            "id": "subnet-005ccaca41d5e430f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "208658976603",
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "vpc_id": "vpc-0afffeb3d0e3941fd"
          },
          "dependencies": [
            "module.create_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208658976603:subnet/subnet-06f71ae0ec816bc61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.24.0/22",
            "id": "subnet-06f71ae0ec816bc61",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "208658976603",
            "tags": {
              "Name": "private3"
            },
            "tags_all": {
              "Name": "private3"
            },
            "vpc_id": "vpc-0afffeb3d0e3941fd"
          },
          "dependencies": [
            "module.create_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208658976603:subnet/subnet-049b1d18fbada0145",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/22",
            "id": "subnet-049b1d18fbada0145",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "208658976603",
            "tags": {
              "Name": "public1"
            },
            "tags_all": {
              "Name": "public1"
            },
            "vpc_id": "vpc-0afffeb3d0e3941fd"
          },
          "dependencies": [
            "module.create_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208658976603:subnet/subnet-0fcf3e75f5e508533",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/22",
            "id": "subnet-0fcf3e75f5e508533",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "208658976603",
            "tags": {
              "Name": "public2"
            },
            "tags_all": {
              "Name": "public2"
            },
            "vpc_id": "vpc-0afffeb3d0e3941fd"
          },
          "dependencies": [
            "module.create_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208658976603:subnet/subnet-05cb49b70e9347d6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.8.0/22",
            "id": "subnet-05cb49b70e9347d6e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "208658976603",
            "tags": {
              "Name": "public3"
            },
            "tags_all": {
              "Name": "public3"
            },
            "vpc_id": "vpc-0afffeb3d0e3941fd"
          },
          "dependencies": [
            "module.create_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.create_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208658976603:vpc/vpc-0afffeb3d0e3941fd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c9d48648ae6d6bda",
            "default_route_table_id": "rtb-04db26279d228a5f0",
            "default_security_group_id": "sg-0487570cd2d3f1397",
            "dhcp_options_id": "dopt-031a3179",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0afffeb3d0e3941fd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04db26279d228a5f0",
            "owner_id": "208658976603",
            "tags": {
              "Name": "Cervian VPC"
            },
            "tags_all": {
              "Name": "Cervian VPC"
            }
          }
        }
      ]
    }
  ]
}